Added: Todos section naming

--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -17,7 +17,7 @@
   border-radius: 1em;
 }
 .TodoFilter > div > div:hover{
-  background-color: rgb(220, 220, 220);
+  background-color: rgb(230, 230, 230);
 }
 .TodoFilter :is(input, label){
   cursor: pointer;
@@ -31,7 +31,7 @@
   opacity: 0;
 }
 .TodoFilter .selectedFilter {
-  background-color: rgb(220, 220, 220);
+  background-color: rgb(220, 220, 220) !important;
 }
 .TodoList{
   display: flex;
@@ -40,6 +40,9 @@
   padding: 1rem;
   margin: 0;
 }
+.TodoList > div h4 {
+  text-align: center;
+} 
 .TodoList > div {
   border-radius: .5em;
   flex-grow: 1;
