--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -5,7 +5,10 @@
 }
 .TodoFilter > div{
   display: flex;
+  flex-wrap: wrap;
+  gap: .5rem;
   margin: 0.5rem;
+  justify-content: center;
 }
 .TodoFilter > div > div{
   position: relative;
@@ -13,7 +16,7 @@
   align-items: center;
   background-color: rgb(240, 240, 240);
   padding: 0.5em 1em;
-  margin: 0 .25rem;
+  margin: 0;
   border-radius: 1em;
 }
 .TodoFilter > div > div:hover{
